# YOPS.FUN

./: .gitignore  ACCESS_TOKEN.sh  CNAME  LICENSE  README.md  cloudinary_answer.txt  do.curl.access_token.sh  do.curl.show_access_token.sh  do.db_dump.sh  index.html  index.html-  jquery.svg3dtagcloud.js  main.py  openai.txt  pyproject.toml  style.css
css/: fontello-codes.css  fontello-embedded.css  fontello-ie7-codes.css  fontello-ie7.css  fontello.css  style.css
font/: fontello.eot
img/: pattern.avif
img/temp/: cat-general.avif
js/: jquery.svg3dtagcloud.min.js
migrations/: env.py  env.py-  env.py.diff
migrations/versions/: 0d7c30185a4f_07_09_2023_10_36_03.py  14093882d63a_02_09_2023_17_53_20.py  1d8d00cfcff4_07_09_2023_14_20_32.py  26fc651d0e89_06_09_2023_15_15_53.py  27dc32695023_07_09_2023_14_22_45.py  29640e409fd2_02_09_2023_17_34_03.py  2db535160138_11_09_2023_18_08_49.py  3367eca249ad_06_09_2023_15_55_12.py  5bb4b99aaf74_05_09_2023_22_45_49.py  6127c384b9cd_06_09_2023_15_45_36.py  629f7926960c_03_09_2023_22_30_28.py  66c0e6214e4e_05_09_2023_20_40_22.py  67b265e62fd6_06_09_2023_13_52_46.py  7660cc19e990_init.py  77242bfc22cd_04_09_2023_10_23_46.py  87d21b1bf581_06_09_2023_13_50_36.py  88351d1db599_04_09_2023_00_09_38.py  97e7ca33c69c_05_09_2023_23_30_53.py  a887023a24e8_12_09_2023_08_08_38.py  c67f10694867_07_09_2023_14_23_53.py  d162f9c61662_13_09_2023_07_14_49.py  d2c56e469505_06_09_2023_13_47_39.py  d7ae209a04a5_03_09_2023_23_51_46.py  dc8d941475e6_05_09_2023_21_45_32.py  f3e944733a23_06_09_2023_13_49_44.py  (+1 more)
src/: schemas.py
src/conf/: config.py  (+1 more)
(+20 files in other folders)
