[tool.poetry]
name = "lifelens"
version = "0.1.0"
description = ""
authors = ["remmover <77463027+remmover@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.103.0"}
alembic = "^1.11.1"
sqlalchemy = "^2.0.19"
asyncpg = "^0.28.0"
libgravatar = "^1.0.4"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
fastapi-mail = "^1.4.1"
redis = "4.6.0"
cloudinary = "^1.34.0"
fastapi-limiter = "^0.1.5"
setuptools = "^68.1.0"
openai = {extras = ["all"], version = "^0.28.0"}
pillow = "^10.0.0"
qrcode = "^7.4.2"
apscheduler = "^3.10.4"

[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
httpx = "^0.24.1"
aiosqlite = "^0.19.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."